2004/05/31 23:13 (+0200) kaffeetisch

	* examples/simple_menu.t: Add a delete_event handler.

	* t/GdkVisual.t: Skip the get_best_with_depth test on 2.2.x.

2004/05/28 22:36 pcg

	* xs/GdkColor.xs: scaling by 257 is better than scaling by 8.

2004/05/21 02:28 (+0200) pcg

        * xs/GtkTextBuffer.xs: Allow creation of anonymous marks.

2004/05/15 20:58 (+0200) kaffeetisch

	* t/GdkEvent.t: Be a bit more tolerant to pass on older gtk+'s.

	* t/GdkProperty.t: Fix skip count.

	* t/GtkFontSelection.t: Convert font name to lowercase before
	testing.

	* t/PangoLayout.t: Shuffle some tests around.

	* xs/GdkInput.xs
	* xs/GdkVisual.xs: Mark 'ax' unused.

	* xs/GdkPixmap.xs: Add version guards to lookup_for_display and
	foreign_new_for_display.

	* xs/GdkVisual.xs: Add version guards to get_screen.

2004/05/11 19:38 (+0200) kaffeetisch

	* Gtk2.exports: Update to reflect recent changes.

	* Makefile.PL: Check for the correct versions of EU::Depends and
	EU::PkgConfig.

	* gtk2perl.h: Remove duplicate declarations of newSVGtkTargetEntry
	and SvGtkTargetEntry.

	* t/GdkKeys.t: Use a version check for the
	translate_keyboard_state test instead of always skipping it.

2004/04/25 13:10 (+0200) kaffeetisch

	* t/GdkDisplay.t: Add a reference to the relevant bug to the FIXME
	comment on close().

	* t/GtkDnd.t: Check that $context is defined before using it.

	* gtk2perl.h
	* xs/PangoLayout.xs: Make SvPangoRectangle accept an array
	reference as well ... and comment it out and remove it from the
	header.  It's not used at the moment.

2004/04/20 15:41 (+0200) kaffeetisch

	<warning size="big" weight="fat">
	  This commit marks some functions static that were previously not
	  static, but not in the header either.  It was a mistake that
	  they were not static, so it needs to be fixed.  This fix has the
	  potential to break ABI compatability, though.  So if you see any
	  breakage that might be related to this change, please speak up
	  and we'll revert it.
	</warning>
