@@ -1,3 +1,8 @@
+2004/06/01 22:00 (-0400) muppetman
+
+	* gtk-demo/appwindow.pl, gtk-demo/images.pl, gtk-demo/main.pl,
+	gtk-demo/pixbufs.pl, gtk-demo/textview.pl: remove dead code
+
 2004/05/31 23:13 (+0200) kaffeetisch
 
 	* examples/simple_menu.t: Add a delete_event handler.
